<resources>
    <string name="app_name">MooTag</string>

    <string name="default_text">Press a button! :D</string>


    <string name="play_btn_txt">Play</string>
    <string name="scan_btn_txt">Scan</string>
    <string name="connect_btn_txt">Connect</string>
    <string name="exit">Exit</string>
    <string name="points_btn_txt">Points Shop</string>
    <string name="start_btn_txt">Start Quiz</string>
    <string name="quiz_tag_txt">Connect to QuizTag</string>
    <string name="skips_text">Skip:</string>
    <string name="coins_text">Coins:</string>
    <string name="hints_text">Hints:</string>
    <string name="skip_icon_description">Skips</string>
    <string name="hint_icon_description">Hints</string>
    <string name="coin_icon_description">Coins</string>
    <string name="tool_bar_back_button_text">Back</string>
    <string name="question_screen_title">Question</string>
    <string name="quit_button_text">Quit</string>
    <string name="buy_hints">Buy Hints</string>
    <string name="buy_skips">Buy Skips</string>
    <string name="scan_screen_name_field">Name: </string>
    <string name="scan_screen_url_text">see more</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="quiz_tag_download_btn_text">Dowload Quiz</string>
    <string name="quiz_type">Quiz Type: </string>
    <string name="total_questions">Total Questions: </string>
    <string name="quiz_type_random">Random</string>
    <string name="quiz_type_story">Story</string>
    <string name="quiz_type_random_explaination">A random quiz means that it will select questions
        randomly from a pool of questions.\n\nProgres cannot be saved for this quiz</string>
    <string name="quiz_type_story_explaination">A story quiz will lead you through questions in a
        specific order. The answers to the next questions will be close by!
        \n\nProgress will be saved for this quiz.</string>
    <string name="no_question_pool_found">No Quiz Found</string>
    <string name="question_prenumber_text">Question:</string>
    <string name="tag_found">Tag Found</string>
    <string name="points">points</string>
    <string name="not_enough_points">Not Enough Points</string>
    <string name="play_more_earn_points">You don\'t have enough points to buy more hints
        \nPlay the game to earn more points!</string>
    <string name="null_object_error">Error occured when starting Game Menu</string>
    <string name="null_object_error_title">Null Object Error</string>
    <string name="confirm_answer1">You have selected:\n\n\t\t\t</string>
    <string name="confirm_answer2">\n\nIs this your final answer?</string>
    <string name="correct">Correct!</string>
    <string name="points_earned1">You earned </string>
    <string name="points_earned2"> points!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="try_again">Try Again!</string>
    <string name="game_menu_title">Game Menu</string>
    <string name="shop_menu_title">Points Shop</string>
    <string name="scan_screen_title">Scan</string>
    <string name="smartcase_title">SmartCase</string>
    <string name="quiz_tag_title">Quiz Tag</string>
    <string name="quiz_complete">Quiz Complete</string>
    <string name="quiz_complete_congrats">Congratulations! You have finished the quiz!
        \nFind a QuizTag to play another quiz, or play this again!</string>
    <string name="quit">Quit</string>
    <string name="final_question">Final Question</string>
    <string name="quiz_downloaded">Quiz Downloaded! Now play it!</string>
</resources>
