<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              app:theme="@style/AppTheme"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".GameMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="0.33"
            android:text="@string/skips_text"
            android:id="@+id/skips_img"
            android:src="@drawable/skip_icon"
            android:padding="10dp"
            android:contentDescription="@string/skip_icon_description" />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="0.33"
            android:text="@string/hints_text"
            android:id="@+id/hints_img"
            android:src="@drawable/hint_icon"
            android:padding="10dp"
            android:contentDescription="@string/hint_icon_description" />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="0.33"
            android:text="@string/coins_text"
            android:id="@+id/coins_img"
            android:src="@drawable/coins_icon"
            android:padding="10dp"
            android:contentDescription="@string/coin_icon_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/skips_text"
            android:id="@+id/skips_count_text"
            android:gravity="center"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/hints_text"
            android:id="@+id/hints_count_text"
            android:gravity="center"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/coins_text"
            android:id="@+id/coins_count_text"
            android:gravity="center"
            android:padding="10dp"/>
    </LinearLayout>

    <include layout="@layout/buy_skips_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.33"
             />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_tag_txt"
        android:textSize="30sp"
        android:id="@+id/quiz_tag_button"
        android:layout_weight="0.33"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/points_btn_txt"
        android:textSize="30sp"
        android:id="@+id/points_button"
        android:layout_weight="0.33"/>

</LinearLayout>