<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="0.33"
            android:text="@string/skips_text"
            android:id="@+id/skips_count_img"
            android:src="@drawable/skip_icon"
            android:scaleType="fitCenter"
            android:contentDescription="@string/skip_icon_description" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="0.33"
            android:text="@string/hints_text"
            android:id="@+id/hints_count_img"
            android:src="@drawable/hint_icon"
            android:scaleType="fitCenter"
            android:contentDescription="@string/hint_icon_description" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="0.33"
            android:text="@string/coins_text"
            android:id="@+id/coins_count_img"
            android:src="@drawable/coins_icon"
            android:scaleType="fitCenter"
            android:contentDescription="@string/coin_icon_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/skips_text"
            android:id="@+id/skips_count_text"
            android:gravity="center"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/hints_text"
            android:id="@+id/hints_count_text"
            android:gravity="center"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/coins_text"
            android:id="@+id/coins_count_text"
            android:gravity="center"
            android:padding="10dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_field"
        android:textSize="15sp"
        android:layout_weight="0.5"
        android:layout_marginBottom="2dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hints_field"
        android:textSize="15sp"
        android:layout_weight="0.5"
        android:layout_marginTop="2dp" />

</LinearLayout>