<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_btn_txt"
            android:background="@android:drawable/btn_default"
            android:textSize="30sp"
            android:id="@+id/play_button"
            android:layout_weight="0.33"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_btn_txt"
            android:background="@android:drawable/btn_default"
            android:textSize="30sp"
            android:id="@+id/connect_button"
            android:layout_weight="0.33"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_btn_txt"
            android:background="@android:drawable/btn_default"
            android:textSize="30sp"
            android:id="@+id/scan_button"
            android:layout_weight="0.33"/>
    </LinearLayout>



</RelativeLayout>
