<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name: "
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/quizTag_Name"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:id="@+id/quizTag_name_field"  />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_questions"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/quizTag_QuestionNo"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:id="@+id/quizTag_QuestionNo_field" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="7sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_type"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/quizTag_quizType" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:id="@+id/quizTag_quizType_field" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text=""
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:scrollbars="vertical"
        android:id="@+id/quizTag_quiztype_Explaination" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@android:drawable/btn_default"
        android:layout_weight="0.2"
        android:textSize="30sp"
        android:text="@string/quiz_tag_download_btn_text"
        android:id="@+id/button" />

</LinearLayout>